[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgenet"
version = "1.0.0b"
authors = [
  { name="Amit Chatterjee"},
]
description = "Knowledgenet RETE engine"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache V2 License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = [
    "RETE",
    "rules engine",
    "knowledge base",
    "inference engine",
    "expert systems",
    "rule-based system",
    "forward chaining",
    "backward chaining",
]
readme = "readme.md"
[project.urls]
Homepage = "https://github.com/amitchatterjee/knowledgenet"
Issues = "https://github.com/amitchatterjee/knowledgenet"
Repository = "https://github.com/amitchatterjee/knowledgenet.git"
Documentation = "https://github.com/amitchatterjee/knowledgenet/tree/develop/doc"