[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_rules"
version = "1.0.0b"
authors = [
  { name="Amit Chatterjee", email="info@quik-j.com" },
]
description = "Example rules package"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache V2 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amitchatterjee/pyrete"
Issues = "https://github.com/amitchatterjee/pyrete"